--- a/Service/index.html
+++ b/Service/index.html
@@ -38,9 +38,8 @@
 
                 <i class="fas fa-desktop "></i>
 
-                <p class="paragraphe">Nous créons des sites web et des solutions innovantes, responsives
-                    et sur mesure qui fournissent une première impression puissanteet qui fonctionnent
-                    parfaitement.<br>
+                <p class="paragraphe">Nous créons des sites web et des solutions innovantes, responsives et sur mesure qui fournissent une première impression puissanteet qui fonctionnent parfaitement.
+                    <br>
                     <a href="https://www.edgybrain.com/creation-developpement-web/" target="_self">
                         <button class="btn">voir plus</button></a>
                 </p>
@@ -52,9 +51,7 @@
 
                 <i class="fas fa-microphone "></i>
 
-                <p class="paragraphe">Nous livrons des stratégies marketing qui
-                    génèrent plus de prospects plus de ventes et
-                    de profits pour vous et qui assuren trafic<br>
+                <p class="paragraphe">Nous livrons des stratégies marketing qui génèrent plus de prospects plus de ventes et de profits pour vous et qui assuren trafic<br>
                     <a href="https://www.edgybrain.com/digital-marketing/" target="_self">
                         <button class="btn">voir plus</button></a>
                 </p>
@@ -67,9 +64,7 @@
 
                 <i class="fas fa-fire"></i>
 
-                <p class="paragraphe">Le Branding est au cœur de tout ce que nous faisons
-                    Nous utilisons la stratégie et le design pour relier les marques
-                    et les clients à travers des choses qu’ils aimentt<br>
+                <p class="paragraphe">Le Branding est au cœur de tout ce que nous faisons Nous utilisons la stratégie et le design pour relier les marques et les clients à travers des choses qu’ils aimentt<br>
                     <a href="https://www.edgybrain.com/brand-strategy/">
                         <button class="btn">voir plus</button></a>
                 </p>
@@ -82,9 +77,7 @@
 
                 <i class="fas fa-drafting-compass"></i>
 
-                <p class="paragraphe">Nous savons bien que votre site Web est le cœur de votr
-                    eprésence Nous créons des expériences-utilisateur uniques spécifiquement
-                    votre entreprise<br>
+                <p class="paragraphe">Nous savons bien que votre site Web est le cœur de votr eprésence Nous créons des expériences-utilisateur uniques spécifiquement votre entreprise<br>
                     <a href="https://www.edgybrain.com/ux-web-design%E2%80%8B/" target="_self">
                         <button class="btn">voir plus</button></a>
                 </p>
@@ -96,9 +89,7 @@
 
                 <i class="fas fa-drafting-compass"></i>
 
-                <p class="paragraphe">Nous savons bien que votre site Web est le cœur de votr
-                    eprésence Nous créons des expériences-utilisateur uniques spécifiquement
-                    votre entreprise<br>
+                <p class="paragraphe">Nous savons bien que votre site Web est le cœur de votr eprésence Nous créons des expériences-utilisateur uniques spécifiquement votre entreprise<br>
                     <a href="https://www.edgybrain.com/ux-web-design%E2%80%8B/" target="_self">
                         <button class="btn">voir plus</button></a>
                 </p>
@@ -108,9 +99,7 @@
 
                 <h2 class="titre3">conception graphique</h2>
                 <i class="fas fa-desktop "></i>
-                <p class="paragraphe">Nous combinons l’art et la technologie pour communiquer
-                    des idées à travers des images et attirerl’attention des utilisateurs
-                    vers votre business<br>
+                <p class="paragraphe">Nous combinons l’art et la technologie pour communiquer des idées à travers des images et attirerl’attention des utilisateurs vers votre business<br>
                     <a href="https://www.edgybrain.com/conception-design-graphique/" target="_self">
                         <button class="btn">voir plus</button></a>
                 </p>
@@ -126,7 +115,7 @@
 
             <button class="btn-B">Bienvenu chez-nous</button><br>
 
-            <button class="btn-R">Retour</button>
+            <a href="/index.html"><button class="btn-R">Retour</button></a>
 
             <h4 class="titre4">Trouvez -<span class="span3"> Nous :</span></h4>
             <div>
