--- a/team and client/index.html
+++ b/team and client/index.html
@@ -26,7 +26,7 @@
                 <ul class="menu">
                     <a class="active" href="/index1.html">ACCUEIL</a>
                     <a href="#">ABOUT</a>
-                    <a href="/service/service.hmtl.html">SERVICES</a>
+                    <a href="/service/index.html">SERVICES</a>
                     <a href="/a propos (omar)/index.html">A PROPOS</a>
                     <a href="/section-pricing/index.html">PRICING</a>
                     <a href="/footer/index.html">CONTACT </a>
@@ -49,11 +49,8 @@
             </div>
             <div class="para">
                 <p>
-                    Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et
-                    de chanteurs de théâtre. Nous abordons le travail et jouons avec
-                    curiosité et expérimentation, en utilisant ce que nous apprenons
-                    pour créer des produits numériques significatifs qui se connectent
-                    avec les gens, tout comme vous.
+                    Nous sommes une équipe de créateurs, de penseurs, d'explorateurs et de chanteurs de théâtre. Nous abordons le travail et jouons avec curiosité et expérimentation, en utilisant ce que nous apprenons pour créer des produits numériques significatifs qui
+                    se connectent avec les gens, tout comme vous.
                 </p>
             </div>
         </div>
@@ -69,11 +66,8 @@
                 <h2>Mark Gale</h2>
                 <h3>Project Manager</h3>
                 <p>
-                    Mark aide nos clients à réaliser leur vision de marque dans l'espace
-                    numérique grâce à des conseils stratégiques et une gestion de projet
-                    rationalisée. Il aide également ses collègues musiciens à réaliser
-                    leur vision de groupe dans l'espace analogique en tant que bassiste
-                    indépendant.
+                    Mark aide nos clients à réaliser leur vision de marque dans l'espace numérique grâce à des conseils stratégiques et une gestion de projet rationalisée. Il aide également ses collègues musiciens à réaliser leur vision de groupe dans l'espace analogique
+                    en tant que bassiste indépendant.
                 </p>
 
                 <ul class="icon">
@@ -100,11 +94,8 @@
                 <h2>Teegan Lincoln</h2>
                 <h3>Front-end Development</h3>
                 <p>
-                    Teegan est un passionné d'Internet avec un penchant pour embrasser
-                    la vie noob. Elle aime bricoler le code et ne trouve rien de plus
-                    satisfaisant que de donner vie aux designs. Hors ligne, le
-                    passe-temps de Teegan collectionne les passe-temps, le dernier étant
-                    le patinage artistique.
+                    Teegan est un passionné d'Internet avec un penchant pour embrasser la vie noob. Elle aime bricoler le code et ne trouve rien de plus satisfaisant que de donner vie aux designs. Hors ligne, le passe-temps de Teegan collectionne les passe-temps, le dernier
+                    étant le patinage artistique.
                 </p>
                 <ul class="icon">
                     <li>
@@ -129,10 +120,7 @@
                 <h2>Matt Boddy</h2>
                 <h3>Web Developer</h3>
                 <p>
-                    Pour toujours jouer avec la technologie. Matt aime se salir les
-                    mains avec toutes sortes de développement et d'administration de
-                    systèmes. Lorsque vous êtes loin de l'écran, Matt peut généralement
-                    être trouvé en classant les hamburgers par délicatesse.
+                    Pour toujours jouer avec la technologie. Matt aime se salir les mains avec toutes sortes de développement et d'administration de systèmes. Lorsque vous êtes loin de l'écran, Matt peut généralement être trouvé en classant les hamburgers par délicatesse.
                 </p>
                 <ul class="icon">
                     <li>
@@ -157,11 +145,8 @@
                 <h2>Kristy Ford</h2>
                 <h3>designer</h3>
                 <p>
-                    Kristy est obsédée par tout ce qui concerne le design.
-                    Perfectionniste dans l'âme, elle croit qu'un bon design est dans les
-                    détails. Quand elle ne fait pas mousser le design danois, vous
-                    pouvez la trouver illustrant, traquant de nouveaux desserts à
-                    essayer, achetant plus de plantes .
+                    Kristy est obsédée par tout ce qui concerne le design. Perfectionniste dans l'âme, elle croit qu'un bon design est dans les détails. Quand elle ne fait pas mousser le design danois, vous pouvez la trouver illustrant, traquant de nouveaux desserts à essayer,
+                    achetant plus de plantes .
                 </p>
                 <ul class="icon">
                     <li>
