--- a/section-pricing/index.html
+++ b/section-pricing/index.html
@@ -25,7 +25,7 @@
                 <ul class="menu">
                     <a class="active" href="/index1.html">ACCUEIL</a>
                     <a href="/team and client/index.html">ABOUT</a>
-                    <a href="/service/service.hmtl.html">SERVICES</a>
+                    <a href="/service/index.html">SERVICES</a>
                     <a href="/a propos (omar)/index.html">A PROPOS</a>
                     <a href="#">PRICING</a>
                     <a href="/footer/index.html">CONTACT </a>
