--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -20,10 +20,10 @@
             <i class="fas fa-ellipsis-h"></i>
         </label>
 
-            <ul class="menu">
+             <ul class="menu">
                 <a class="active" href="/index.html">ACCUEIL</a>
                 <a href="/team and client/index.html">ABOUT</a>
-                <a href="/service/service.hmtl.html">SERVICES</a>
+                <a href="/service/service.hmtl">SERVICES</a>
                 <a href="#">A PROPOS</a>
                 <a href="/section-pricing/index.html">PRICING</a>
                 <a href="/footer/index.html">CONTACT </a>
