--- a/team and client/index.html
+++ b/team and client/index.html
@@ -29,7 +29,7 @@
                     <a href="/service/index.html">SERVICES</a>
                     <a href="/a propos (omar)/index.html">A PROPOS</a>
                     <a href="/section-pricing/index.html">PRICING</a>
-                    <a href="/footer/index.html">CONTACT </a>
+                    <a href="/Foter2/index.html">CONTACT </a>
 
                     <label for="chk" class="hide-menu-btn">
                    
