--- a/a propos (omar)/index.html
+++ b/a propos (omar)/index.html
@@ -23,7 +23,7 @@
         </label>
 
                 <ul class="menu">
-                    <a class="active" href="/index1.html">ACCUEIL</a>
+                    <a class="active" href="/index.html">ACCUEIL</a>
                     <a href="/team and client/index.html">ABOUT</a>
                     <a href="/service/index.html">SERVICES</a>
                     <a href="#">A PROPOS</a>
